<?php

namespace Database\Migrations;

use Database\SchemaMigration;

class CreateTempUsersTable implements SchemaMigration {
    public function up(): array {
        // TODO: マイグレーションロジックを追加
        return [
            "CREATE TABLE temp_users (
                temp_user_id INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
                user_id INT UNSIGNED NOT NULL,
                signature VARCHAR(64) NOT NULL UNIQUE,
                type ENUM('PASSWORD_RESET') NOT NULL DEFAULT 'PASSWORD_RESET',
                created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
                FOREIGN KEY (user_id) REFERENCES users(user_id) ON DELETE CASCADE
            )"
        ];
    }

    public function down(): array {
        // TODO: ロールバックロジックを追加
        return [
            "DROP TABLE temp_users"
        ];
    }
}
